Bug 1684764 - Fix crash in [@ mozilla::detail::nsTStringRepr<T>::First | nsMsgComposeService::Handle] via nsCommandLine. r=edicharry

Happens e.g. with `thunderbird -compose mailto:test@example.com ""`

Differential Revision: https://phabricator.services.mozilla.com/D261752

--HG--
extra : rebase_source : 700748898e74f10ac00b326478d6c43581f5031f